Updated logic + webpage @ domain:port/RestServer/

--- a/web/index.html
+++ b/web/index.html
@@ -1,16 +1,63 @@
 <!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
 <html>
-    <head>
-        <title>TODO supply a title</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    </head>
-    <body>
-        <div>TODO write content</div>
-    </body>
+	<head>
+		<title>Galgeleg</title>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+		<script src="script.js"></script>
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+		<link rel="stylesheet" href="style.css">
+	</head>
+	<body class="not-logged-in">
+		<!-- Page header -->
+		<div class="header">
+			<h1>Galgeleg</h1>
+		</div>
+		<div class="headerline"></div>
+		<!-- Content -->
+		<div class="positioning">
+			<div style="width: 100%; display: table;">
+				<div style="display: table-row">
+					<!--Game-->
+					<div class="content left">
+						<form id="login_form">
+						  <div class="form-group">
+							<label for="InputUsername">Brugernavn</label>
+							<input type="text" class="form-control" id="username" name="username" placeholder="Brugernavn">
+						  </div>
+						  <div class="form-group">
+							<label for="InputPassword">Password</label>
+							<input type="password" class="form-control" id="password" name="password" placeholder="Password">
+						  </div>
+						  <button type="submit" class="btn btn-default">Login</button>
+						  <div id="feedback"></div>
+						</form>
+
+						<form id="guess_form">
+							<div class="hangman">
+								<img src="grafik/forkert0.png" id="image" alt="grafik" style="width:170px;height:205px">
+								<div id="invisibleword"></div>
+								<div id="usedletters"></div>
+							</div>
+							<div class="form-group" id="guess_box">
+								<label for="InputLetter">Gæt et bogstav</label>
+								<input type="text" class="form-control" id="letter" name="letter" placeholder="Bogstav" autocomplete="off">
+								<div id="result"></div>
+							</div>
+							<div class="form-group" id="retry_button">
+								<div id="result2"></div>
+								<button type="button" id="button" class="btn btn-default">Vil du prøve igen?</button>
+							</div>
+						</form>
+					</div>
+					<!--Highscore-->
+					<div class="content right">
+						Highscore<br>
+						(Not yet implemented)
+					</div>
+				</div>
+			</div>
+		</div>
+	</body>
 </html>
